[tool.poetry]
name = "veil"
version = "0.0.1"
description = "A model validation framework"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "veil"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"